(migrate-to-next-js) fixed UI glitch by removing duplicated scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,9 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
 
+body {
     overflow-y: scroll;
 }
 
